--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@
     scroll-behavior: smooth;
 }
 
+/* ==== Allgemein ==== */
+
 img{
     width: 100%;
     transition: 2s ease;
@@ -86,6 +88,8 @@ main span{
 
 /* ==== FOOTER ==== */
 
+/* TABLE - Sorry, das ist nur ein Spaß, hoffe ihr nehmt mir das nicht übel. */
+
 table{
     padding: 5% 0 0 5%;
     text-align: left;
@@ -108,6 +112,8 @@ table tr td:first-of-type{
 .tWidth1{
     width: 15%;
 }
+
+/* FOOTER NAV */
 
 footer nav ul{
     display: flex;
@@ -157,7 +163,7 @@ footer nav ul li:nth-of-type(1){
 }
 
 #contact h2{
-    padding: 0 0 5% 0;
+    padding: 5% 0 5% 0;
 }
 
 #contact p{
@@ -260,7 +266,8 @@ footer nav ul li:nth-of-type(1){
         padding: 0 0 3% 0;
     }
     #messageSent{
-        margin: 10% 3%;
+        margin: 5% 10%;
+        padding: 10% 0% 8% 0%;
     }
     /* Mobile Menu */
     #desktopHeader{
