--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ a{
     justify-content: space-between;
 }
 
+button:active {
+    transform: scale(0.95);
+}
+
 /* ==== HEADER ==== */
 
 header nav{
